# my-voice

./: .gitignore  README.md  plan.md  pyproject.toml
my_voice/: __init__.py  app.py  assembly.py  audio.py  cleanup.py  config.py  diagnostics.py  feedback.py  focus.py  insertion.py  macos_app.py  permissions.py  personal_corrections.py  status_bar.py  transcriber.py  vad.py
packaging/: MyVoice.spec
scripts/: build_macos_app.sh  install.sh  install_launch_agent.sh  launch_agent_status.sh  reset_macos_permissions.sh  restart_launch_agent.sh  uninstall.sh  uninstall_launch_agent.sh
tests/: test_text_pipeline.py
